cilium-gateway.yaml
# Main Gateway configuration for Cilium Gateway Controller
# This manifest defines the GatewayClass, Gateway, HTTPRoute, and ClusterIssuer resources needed to set up a
# main gateway using Cilium Gateway Controller. This gateway will handle incoming HTTP and HTTPS traffic,
# redirecting HTTP to HTTPS and serving TLS certificates for specified domains
# using cert-manager with Cloudflare as the DNS provider.
#
# Warning: Secrets needed !!
# Make sure to create the Kubernetes secret named "cloudflare-api-token-secret"
# in the same namespace where the ClusterIssuer is defined.
# This secret need DNS edit permissions and zone read permissions.
#----------------------------------------------

# Gateway class: Defines the controller that will manage the gateways. In this case, we specify the Cilium Gateway Controller.
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
--- # Gateway: Defines the gateway resource that will handle incoming traffic.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer" # Cloudflare certificates
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      io.cilium/needs-ip: "true" # This label is used to assign an IP address from the CiliumLoadBalancerIPPool defined in cilium-IP-pool.yaml
  listeners:
  - name: http # http listener on port 80, which will redirect to https
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https-dev # Listener for https public .dev domain
    protocol: HTTPS
    port: 443
    hostname: "joshiro.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-joshiro-dev
    allowedRoutes:
      namespaces:
        from: All
  - name: https-dev-subdomains # Listener for https public .dev subdomains
    protocol: HTTPS
    port: 443
    hostname: "*.joshiro.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-joshiro-dev
    allowedRoutes:
      namespaces:
        from: All
  - name: https-local-dev # Listener for https local .dev domain
    protocol: HTTPS
    port: 443
    hostname: "*.local.joshiro.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-local-joshiro-dev
    allowedRoutes:
      namespaces:
        from: All
  - name: https-xyz # Listener for https public .xyz domain
    protocol: HTTPS
    port: 443
    hostname: "joshiro.xyz"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-joshiro-xyz
    allowedRoutes:
      namespaces:
        from: All
  - name: https-xyz-subdomains # Listener for https public .xyz subdomains
    protocol: HTTPS
    port: 443
    hostname: "*.joshiro.xyz"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-joshiro-xyz
    allowedRoutes:
      namespaces:
        from: All
  - name: https-local-xyz # Listener for https local .xyz domain
    protocol: HTTPS
    port: 443
    hostname: "*.local.joshiro.xyz"
    tls:
      mode: Terminate
      certificateRefs:
      - name: cert-local-joshiro-xyz
    allowedRoutes:
      namespaces:
        from: All
---
# HTTPRoute: Defines the routing rules for the gateway. In this case, we set up a rule to redirect all HTTP traffic to HTTPS.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  parentRefs:
  - name: main-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
